toList方法返回的是一个final的list, 序列化时无法写入类型